positioning the canvas correctly, without letting it overflow, using css variables!

--- a/src/style.css
+++ b/src/style.css
@@ -61,23 +61,29 @@ html, body {
 
 /** STUFF ABOVE IS STANDARD FRAMEWORK **/
 
+:root {
+  --controls-height: 2em;
+}
+
 .main {
   position: relative;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  height: calc(100vh - var(--controls-height));
 }
 
 .controls {
   position: relative;
   flex-grow: 0;
+  height: var(--controls-height);
 }
 
 .renderer {
   display: block;
   position: relative;
   margin: auto;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   background: black;
 }
